--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 					  <ul class="nav navbar-nav navbar-right" id="menu">
 						<li><a href="#"  data-page="1">Home</a></li>
 						<li><a href="#" data-page="2">About</a></li>
-						<li><a href="#" data-page="3">Education</a></li>
-						<li><a href="#" data-page="4">Experience</a></li>
+						<li><a href="#" data-page="3">Experience</a></li>
+						<li><a href="#" data-page="4">Education</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
-						<li><a href="#" data-page="6">Portfolio</a></li>
+						<!-- <li><a href="#" data-page="6">Portfolio</a></li> -->
 						<li><a href="#" data-page="7">Contact</a></li>
 					  </ul>
 					</div><!-- /.navbar-collapse -->
@@ -113,38 +113,87 @@
 				  </div> <!-- /First page -->
 
 					<!-- About -->
-					<div class="bb-item" id="page-1">
+					<div class="bb-item" id="page-3">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">About</span></h1>
+								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
+										<img src="images/KPMG-hackaton.jpg" alt="joypad icon"/>
+									</div>
+									<div class="col-sm-6 col-sm-pull-2">
+										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.</p>
+									<!-- </div>
 										<img src="images/DNTlogo-mini.png" alt="man icon"/>
 									</div>
 									<div class="col-sm-6">
-										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and good ideas!
+										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas!
 											I’m a fun, reliable, loyal and determined person that is full of creative ideas.
 												I enjoy a challenge and am happy to work alone or within a team.
 												  I have a positive can do attitude that allows me to work with any type of person to get the job done.
 													In my spare time I do yoga, go into nature, play soccer and read.
 											</br>
-									</div>
+									</div> -->
 								</div>
 								<div class="row content-block text-justify animateFadeInLeft">
 									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
-										<img src="images/CFA-logo.jpg" alt="joypad icon"/>
+										<img src="images/mycare.jpg" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
-										<p>I am the Co Founder of <a href="www.demnoveltees.com.au">Dem Novel Tees</a> an Australian humour based clothing label heavily influenced by the 90s pop culture era.
-									Through starting this business I developed a love for technology and saw the potential it has to impact every aspect of business. So I decided to further my knowledge in tech by completing
-									an intensive 6 month coding boot camp at Coder Factory. The classes ran from 9am till 5:30pm 5 days a week with many more hours spent in my own time constantly learning. The course
-									has given me a great foundation in web development and I'm ready to change the world!</p>
+										<p>A caring innovator<br>I enjoy a challenge and am happy to work alone or within a team. I have a passion for helping people & love to innovate. I have a positive can do attitude that allows me to work with any type of person to get the job done. In my spare time I do yoga, go into nature, play soccer and read.</p>
 									</div>
 								</div>
 							</div>
 						</div>
+						</div>
 					</div>
 					<!-- /About -->
+
+					<!-- Experience -->
+					<div class="bb-item" id="page-3">
+						<div class="bb-custom-side">
+							<div class="bb-custom-container">
+								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
+								<div class="row content-block text-justify animateFadeInRight">
+									<div class="col-sm-2 col-sm-offset-2 text-center">
+										<img src="images/YA-logo.png" alt="joypad icon"/>
+									</div>
+									<div class="col-sm-6 col-sm-pull-2">
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
+									<!-- </div>
+										<img src="images/DNTlogo-mini.png" alt="man icon"/>
+									</div>
+									<div class="col-sm-6">
+										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas!
+											I’m a fun, reliable, loyal and determined person that is full of creative ideas.
+												I enjoy a challenge and am happy to work alone or within a team.
+												  I have a positive can do attitude that allows me to work with any type of person to get the job done.
+													In my spare time I do yoga, go into nature, play soccer and read.
+											</br>
+									</div> -->
+								</div>
+								<div class="row content-block text-justify animateFadeInLeft">
+									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
+										<img src="images/yogahive-logo.png" alt="joypad icon"/>
+									</div>
+									<div class="col-sm-6 col-sm-pull-2">
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+									</div>
+								</div>
+							</div>
+							<div class="row content-block text-justify animateFadeInRight">
+								<div class="col-sm-2 col-sm-offset-2 text-center">
+									<img src="images/swiftleads-logo-final" alt="joypad icon"/>
+								</div>
+								<div class="col-sm-6 col-sm-pull-2">
+									<p>Director <a href="www.swiftleads.com">Swiftleads</a>Swiftleads is an online leads management software that provides an all in one digital solution for service based businesses. As a part of this business I have been managing and developing client websites within the system, whilst working closely with my business partner to design & develop a custom solution to open the platform to the public with the focus on digital skills education.</p>
+							</div>
+
+							</div>
+						</div>
+						</div>
+					</div>
+					<!-- /Experience -->
 
 					<!-- Education -->
 					<div class="bb-item" id="page-2">
@@ -168,8 +217,7 @@
 											</div>
 											<h2>Construction Management - UNSW</h2>
 											<p class="text-justify">
-												Completed 18 months of a construction management degree at UNSW. I unfortunately had to leave the degree due to family matters
-												at the time but gained vast amounts of knowledge and plan to finish later in my life.
+												Completed 18 months of a construction management degree at UNSW.
 											</p>
 										</div>
 									</div>
@@ -178,19 +226,18 @@
 											<div class="square pull-left">
 												<i class="fa fa-calendar"></i> 2016
 											</div>
-											<h2>Diploma Software Development - Coder Factory</h2>
+											<h2>Diploma Software Development - Australian Institute of Technology</h2>
 											<p class="text-justify">
                         A 6 month intensive bootcamp providing me with the skills to become a full stack web developer.
 											</p>
 										</div>
 										<div class="blockquote-box blockquote-danger clearfix animateBounceInRight">
 											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2016
+												<i class="fa fa-calendar"></i> 2018
 											</div>
-											<h2>User Experience Workshop - Academy Xi</h2>
+											<h2>Human Centred Design - IDEO</h2>
 											<p class="text-justify">
-												The one day workshop went through the whole user experience process. Teaching us how to do customer research to validate ideas and using that information to create
-												a product that solves users problems providing them with an experience tailored to their needs.
+												Completed a human centred design course gaining great insight into forward thinking design principals.
 											</p>
 										</div>
 									</div>
@@ -201,7 +248,7 @@
 					<!-- /Education -->
 
 					<!-- Experience -->
-					<div class="bb-item" id="page-3">
+					<!-- <div class="bb-item" id="page-3">
 						<div class="bb-custom-side" id="experience">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
@@ -246,7 +293,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!-- /Experience -->
 
 					<!-- Skills -->
@@ -261,22 +308,47 @@
                         <span class="sr-only">70% Complete (success)</span>
                       </div>
                       <span class="progress-type">HTML</span>
-                      <span class="progress-completed">90%</span>
+                      <span class="progress-completed">100%</span>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
                       <span class="progress-type">CSS</span>
-                      <span class="progress-completed">75%</span>
+                      <span class="progress-completed">100%</span>
                     </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
+                      <span class="progress-type">JIRA Agile Project Management</span>
+                      <span class="progress-completed">100%</span>
+                    </div>
+										<div class="progress">
+											<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
+											<span class="progress-type">UI Design (Photoshop)</span>
+											<span class="progress-completed">85%</span>
+										</div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
                       <span class="progress-type">Bootstrap</span>
+                      <span class="progress-completed">85%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Customer Relationship Management</span>
                       <span class="progress-completed">80%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
                       <span class="progress-type">Ruby On Rails</span>
                       <span class="progress-completed">75%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Google Ads</span>
+                      <span class="progress-completed">90%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Social Media Marketing</span>
+                      <span class="progress-completed">90%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
@@ -288,30 +360,15 @@
                       <span class="progress-type">AWS</span>
                       <span class="progress-completed">55%</span>
                     </div>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
-                      <span class="progress-type">Javascript</span>
-                      <span class="progress-completed">65%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
-                      <span class="progress-type">React</span>
-                      <span class="progress-completed">50%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
-                      <span class="progress-type">Angular</span>
-                      <span class="progress-completed">50%</span>
-                    </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
-                      <span class="progress-type">Databases</span>
+                      <span class="progress-type">Database Design</span>
                       <span class="progress-completed">80%</span>
                     </div>
 										<div class="progress">
-                      <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Photoshop</span>
-                      <span class="progress-completed">75%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
+                      <span class="progress-type">SEO</span>
+                      <span class="progress-completed">80%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
@@ -323,27 +380,17 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-4 col-sm-offset-2 animateFadeInUp">
                     <div class="well">
-                      <h3>Web Development</h3>
+                      <h3>Product Management</h3>
                       <p>
-												I am capable of building a web app that is mobile responsive from scratch.
-												I have expereince building apps with Ruby on Rails using SQLite3 & postgres for the databases, doing my own styling using bootstrap or materialise CSS libaries.
-												I have an a good understanding of javascript. I've worked through a few tutorials using MongoDB, Express, Angular and Node.js (MEAN stack)
-												having an understanding of some of the core concept but have alot to still learn and am looking forward to the challenge. In the mean time though
-												I'm focusing on rails with the jobs I'm currently working on. Once I have more experience there I'll go deepr into the
-												javascript frameworks and libaries. I have experience with CMS like shopify and WordPress as well as SEO knowledge.
+												I have experience in developing in the full product lifecyle from initial concept to full live solution. With the ability to design, project manage and assist with development.
                       </p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-4 animateFadeInUp">
                     <div class="well">
-                      <h3>Online Marketing / Business Strategy</h3>
+                      <h3>Innovation & Business Strategy</h3>
                       <p>
-                        I group these two skills together as I believe they go hand in hand in todays economy.
-												I have experience with facebook ads, instagram ads google ad words and SEO management.
-												Which are essential tools for growth of new and existing business. If leveraged correctly
-												brands can increased awareness of products and services targeting ads at the exact demographic
-												that applies to them. These ads can even be targeted by interests but still need to be able to communicate
-												the right message to be able to appeal to the target audience. Something that I have an eye for.
+                      	I love nothing more than scheming and coming up with new concepts and trialling them in the market. With extensive customer experience design & execution strategy planning.
                       </p>
                     </div>
                   </div>
@@ -354,7 +401,7 @@
 					<!-- /Skills -->
 
 					<!-- Portfolio -->
-					<div class="bb-item" id="page-5">
+					<!-- <div class="bb-item" id="page-5">
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Portfolio</span></h1>
@@ -362,7 +409,7 @@
 									<div class="col-sm-6 col-md-4 text-center animateFlipInX">
 										<div class="portfolio-item">
 											<p><a href="https://rocky-mountain-58582.herokuapp.com/profile"><img class="imageShrink2" src="images/divx-profile.jpg" alt="Clock icon"/></a></p>
-											<h4>DiversityX live demo</h4>
+											<h4>Yogability Australia</h4>
 											<p>Built in Ruby on Rails hosted on heroku used as a live demo to show to investors.</p>
 										</div>
 									</div>
@@ -406,7 +453,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
           <!-- /Portfolio -->
 
 					<!-- Contact -->
@@ -418,7 +465,7 @@
 									<div class="col-sm-12 text-center">
 										<img class="imageShrink3" src="images/envelope-icon.png">
 										<br>
-										<h2 class="contact">Marshallgray1992@gmail.com</h2>
+										<h2 class="contact">Marshall@yogability.org.au</h2>
 										<br>
 										<a class="btn" href="https://www.linkedin.com/in/marshall-gray-031a85103?trk=nav_responsive_tab_profile"><i class="fa fa-4x fa-linkedin"></i></a>
 									</div>
