--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 				  </div> <!-- /First page -->
 
 					<!-- About -->
-					<div class="bb-item" id="page-3">
+					<div class="bb-item" id="page-2">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
+								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
 										<img src="images/KPMG-hackaton.jpg" alt="joypad icon"/>
