--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 					  <ul class="nav navbar-nav navbar-right" id="menu">
 						<li><a href="#"  data-page="1">Home</a></li>
 						<li><a href="#" data-page="2">About</a></li>
-						<li><a href="#" data-page="3">Experience</a></li>
-						<li><a href="#" data-page="4">Education</a></li>
+						<li><a href="#" data-page="3">Education</a></li>
+						<li><a href="#" data-page="4">Experience</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
-						<!-- <li><a href="#" data-page="6">Portfolio</a></li> -->
+						<li><a href="#" data-page="6">Portfolio</a></li>
 						<li><a href="#" data-page="7">Contact</a></li>
 					  </ul>
 					</div><!-- /.navbar-collapse -->
@@ -113,13 +113,13 @@
 				  </div> <!-- /First page -->
 
 					<!-- About -->
-					<div class="bb-item" id="page-2">
+					<div class="bb-item" id="page-1">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
-										<img src="images/KPMG-hackaton.jpg" alt="joypad icon"/>
+										<img src="images/KPMG-hackaton.jpg" alt=""/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
 										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.</p>
@@ -145,12 +145,11 @@
 								</div>
 							</div>
 						</div>
-						</div>
 					</div>
 					<!-- /About -->
 
-					<!-- Experience -->
-					<div class="bb-item" id="page-3">
+					<!-- Education -->
+					<div class="bb-item" id="page-2">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
@@ -167,7 +166,7 @@
 										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas!
 											I’m a fun, reliable, loyal and determined person that is full of creative ideas.
 												I enjoy a challenge and am happy to work alone or within a team.
-												  I have a positive can do attitude that allows me to work with any type of person to get the job done.
+													I have a positive can do attitude that allows me to work with any type of person to get the job done.
 													In my spare time I do yoga, go into nature, play soccer and read.
 											</br>
 									</div> -->
@@ -177,27 +176,18 @@
 										<img src="images/yogahive-logo.png" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a> <br>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
 									</div>
 								</div>
-							</div>
-							<div class="row content-block text-justify animateFadeInRight">
-								<div class="col-sm-2 col-sm-offset-2 text-center">
-									<img src="images/swiftleads-logo-final" alt="joypad icon"/>
 								</div>
-								<div class="col-sm-6 col-sm-pull-2">
-									<p>Director <a href="www.swiftleads.com">Swiftleads</a>Swiftleads is an online leads management software that provides an all in one digital solution for service based businesses. As a part of this business I have been managing and developing client websites within the system, whilst working closely with my business partner to design & develop a custom solution to open the platform to the public with the focus on digital skills education.</p>
 							</div>
-
-							</div>
-						</div>
 						</div>
 					</div>
-					<!-- /Experience -->
+					<!-- /Education -->
 
-					<!-- Education -->
-					<div class="bb-item" id="page-2">
-						<div class="bb-custom-side">
+					<!-- Experience -->
+					<div class="bb-item" id="page-3">
+						<div class="bb-custom-side" id="experience">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Education</span></h1>
 								<div class="row">
@@ -245,55 +235,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- /Education -->
-
-					<!-- Experience -->
-					<!-- <div class="bb-item" id="page-3">
-						<div class="bb-custom-side" id="experience">
-							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
-								<div class="row">
-									<div class="col-sm-12 animateFadeInUp">
-										<div class="panel panel-default">
-											<div class="panel-heading">Coder Factory</div>
-											<div class="panel-body">
-												A 6 Month intensive coding bootcamp with an emphasis on practical knowledge. First term saw us learn about
-											 front end web development. Starting with HTML, CSS moving into CSS libraries like bootstrap then going into agile methodology, git / github, wireframing,
-											 UX and UI design. Second term we dove deeply into Ruby and Ruby on Rails, also learning about hosting in Heroku, AWS, mapping user stories / journeys with trello, and ERD mapping using DBDesigner.
-											 Third term focused on Javascript, the MEAN stack (MongoDB, Express, Angular and Node) and React.
-											</div>
-											<div class="panel-footer">Student, from 2016 to 2016</div>
-										</div>
-									</div>
-
-								</div>
-								<div class="row">
-									<div class="col-sm-6 animateFadeInUp">
-										<div class="panel panel-default">
-											<div class="panel-heading">Dem Novel Tees</div>
-											<div class="panel-body">
-												 I develop the brand strategies, manage and designed the website / inventory, help with production, design shirt images. Improving sales through online marketing
-												 and managing the social media presence.
-											</div>
-											<div class="panel-footer">Co Founder and Product Manager, From 2015 to present</div>
-										</div>
-									</div>
-									<div class="col-sm-6 animateFadeInDown">
-										<div class="panel panel-default">
-											<div class="panel-heading">DiversityX</div>
-											<div class="panel-body">
-												DiversityX is a Startup that helps people with disabilities find work.
-												I worked with the Startup to build an MVP used as a demo at a REMARKABLE pitch night.
-												Built it in Ruby on Rails with a SQLite3 database in development and moved to postgres for product hosting it on heroku.
-												Worked with the designer to come up with user flow for the full build in which I will be contributing to also.
-											</div>
-											<div class="panel-footer">Developer, From 2016 to present</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div> -->
 					<!-- /Experience -->
 
 					<!-- Skills -->
@@ -301,7 +242,7 @@
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Skills</span></h1>
-                <div class="row">
+								<div class="row">
                   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="90">
@@ -401,7 +342,7 @@
 					<!-- /Skills -->
 
 					<!-- Portfolio -->
-					<!-- <div class="bb-item" id="page-5">
+					<div class="bb-item" id="page-5">
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Portfolio</span></h1>
@@ -409,7 +350,7 @@
 									<div class="col-sm-6 col-md-4 text-center animateFlipInX">
 										<div class="portfolio-item">
 											<p><a href="https://rocky-mountain-58582.herokuapp.com/profile"><img class="imageShrink2" src="images/divx-profile.jpg" alt="Clock icon"/></a></p>
-											<h4>Yogability Australia</h4>
+											<h4>DiversityX live demo</h4>
 											<p>Built in Ruby on Rails hosted on heroku used as a live demo to show to investors.</p>
 										</div>
 									</div>
@@ -453,7 +394,7 @@
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
           <!-- /Portfolio -->
 
 					<!-- Contact -->
@@ -465,7 +406,7 @@
 									<div class="col-sm-12 text-center">
 										<img class="imageShrink3" src="images/envelope-icon.png">
 										<br>
-										<h2 class="contact">Marshall@yogability.org.au</h2>
+										<h2 class="contact">Marshallgray1992@gmail.com</h2>
 										<br>
 										<a class="btn" href="https://www.linkedin.com/in/marshall-gray-031a85103?trk=nav_responsive_tab_profile"><i class="fa fa-4x fa-linkedin"></i></a>
 									</div>
