--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     </script>
 
 		<!-- Theme change plugin, make sure to remove before deploying into production -->
-		<div class="slide-out-div">
+		<!-- <div class="slide-out-div">
 			<a class="handle" href="#"></a>
 			<h3>Change Color</h3>
 			<ul id="color-switcher" class="list-inline">
@@ -459,6 +459,6 @@
 				<li><a href="#" data-rel="css/theme-colors/glade.css"><img src="images/glade-theme.png" alt="Glade Theme Color" /></a></li>
 				<li><a href="#" data-rel="css/theme-colors/kimberly.css"><img src="images/kimberly-theme.png" alt="Kimberly Theme Color" /></a></li>
 			</ul>
-		</div>
+		</div> -->
 	</body>
 </html>
