--- a/index.html
+++ b/index.html
@@ -143,37 +143,78 @@
 					<div class="bb-item" id="page-2">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
-
+								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
-										<img src="images/YA-logo.png" alt="joypad icon"/>
-									</div>
-									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
-									<!-- </div>
 										<img src="images/DNTlogo-mini.png" alt="man icon"/>
 									</div>
 									<div class="col-sm-6">
-										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas!
-											I’m a fun, reliable, loyal and determined person that is full of creative ideas.
-												I enjoy a challenge and am happy to work alone or within a team.
-													I have a positive can do attitude that allows me to work with any type of person to get the job done.
-													In my spare time I do yoga, go into nature, play soccer and read.
+										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.
 											</br>
-									</div> -->
+									</div>
 								</div>
 								<div class="row content-block text-justify animateFadeInLeft">
 									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
-										<img src="images/yogahive-logo.png" alt="joypad icon"/>
+										<img src="images/CFA-logo.jpg" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a> <br>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+										<p>A caring innovator<br>I enjoy a challenge and am happy to work alone or within a team. I have a passion for helping people & love to innovate. I have a positive can do attitude that allows me to work with any type of person to get the job done. In my spare time I do yoga, go into nature, play soccer and read.</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<!-- <div class="bb-item" id="page-2">
+						<div class="bb-custom-side">
+							<div class="bb-custom-container">
+								<h1 class="text-center"><span class="page-heading">Education</span></h1>
+								<div class="row">
+									<div class="col-md-6">
+										<div class="blockquote-box blockquote-primary clearfix animateBounceInLeft">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2008 - 2010
+											</div>
+											<h2>St Marys Senior High School</h2>
+											<p class="text-justify">
+												Completed my HSC studying English, Mathematics, Biology, Business and PDHPE.
+											</p>
+										</div>
+										<div class="blockquote-box blockquote-success clearfix animateBounceInLeft">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2011 - 2012
+											</div>
+											<h2>Construction Management - UNSW</h2>
+											<p class="text-justify">
+												Completed 18 months of a construction management degree at UNSW. I unfortunately had to leave the degree due to family matters
+												at the time but gained vast amounts of knowledge and plan to finish later in my life.
+											</p>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="blockquote-box blockquote-warning clearfix animateBounceInRight">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2016
+											</div>
+											<h2>Diploma Software Development - Coder Factory</h2>
+											<p class="text-justify">
+                        A 6 month intensive bootcamp providing me with the skills to become a full stack web developer.
+											</p>
+										</div>
+										<div class="blockquote-box blockquote-danger clearfix animateBounceInRight">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2016
+											</div>
+											<h2>User Experience Workshop - Academy Xi</h2>
+											<p class="text-justify">
+												The one day workshop went through the whole user experience process. Teaching us how to do customer research to validate ideas and using that information to create
+												a product that solves users problems providing them with an experience tailored to their needs.
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div> -->
 					<!-- /Education -->
 
 					<!-- Experience -->
