--- a/index.html
+++ b/index.html
@@ -151,23 +151,12 @@
 									</div>
 								</div>
 								<div class="row content-block text-justify animateFadeInLeft">
-									<div class="col-sm-2 col-sm-offset-2 text-center">
-										<img src="images/YA-logo.png" alt="joypad icon"/>
+									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
+										<img src="images/CFA-logo.jpg" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
-									<!-- </div>
-										<img src="images/DNTlogo-mini.png" alt="man icon"/>
+										<p>A caring innovator<br>I enjoy a challenge and am happy to work alone or within a team. I have a passion for helping people & love to innovate. I have a positive can do attitude that allows me to work with any type of person to get the job done. In my spare time I do yoga, go into nature, play soccer and read.</p>
 									</div>
-									<div class="col-sm-6">
-										<p>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas!
-											I’m a fun, reliable, loyal and determined person that is full of creative ideas.
-												I enjoy a challenge and am happy to work alone or within a team.
-													I have a positive can do attitude that allows me to work with any type of person to get the job done.
-													In my spare time I do yoga, go into nature, play soccer and read.
-											</br>
-									</div> -->
-								</div>
 								</div>
 							</div>
 						</div>
@@ -229,46 +218,43 @@
 					<div class="bb-item" id="page-3">
 						<div class="bb-custom-side" id="experience">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Education</span></h1>
+								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
 								<div class="row">
-									<div class="col-md-6">
-										<div class="blockquote-box blockquote-primary clearfix animateBounceInLeft">
-											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2008 - 2010
+									<div class="col-sm-12 animateFadeInUp">
+										<div class="panel panel-default">
+											<div class="panel-heading">Coder Factory</div>
+											<div class="panel-body">
+												A 6 Month intensive coding bootcamp with an emphasis on practical knowledge. First term saw us learn about
+											 front end web development. Starting with HTML, CSS moving into CSS libraries like bootstrap then going into agile methodology, git / github, wireframing,
+											 UX and UI design. Second term we dove deeply into Ruby and Ruby on Rails, also learning about hosting in Heroku, AWS, mapping user stories / journeys with trello, and ERD mapping using DBDesigner.
+											 Third term focused on Javascript, the MEAN stack (MongoDB, Express, Angular and Node) and React.
 											</div>
-											<h2>St Marys Senior High School</h2>
-											<p class="text-justify">
-												Completed my HSC studying English, Mathematics, Biology, Business and PDHPE.
-											</p>
-										</div>
-										<div class="blockquote-box blockquote-success clearfix animateBounceInLeft">
-											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2011 - 2012
-											</div>
-											<h2>Construction Management - UNSW</h2>
-											<p class="text-justify">
-												Completed 18 months of a construction management degree at UNSW.
-											</p>
+											<div class="panel-footer">Student, from 2016 to 2016</div>
 										</div>
 									</div>
-									<div class="col-md-6">
-										<div class="blockquote-box blockquote-warning clearfix animateBounceInRight">
-											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2016
+
+								</div>
+								<div class="row">
+									<div class="col-sm-6 animateFadeInUp">
+										<div class="panel panel-default">
+											<div class="panel-heading">Dem Novel Tees</div>
+											<div class="panel-body">
+												 I develop the brand strategies, manage and designed the website / inventory, help with production, design shirt images. Improving sales through online marketing
+												 and managing the social media presence.
 											</div>
-											<h2>Diploma Software Development - Australian Institute of Technology</h2>
-											<p class="text-justify">
-                        A 6 month intensive bootcamp providing me with the skills to become a full stack web developer.
-											</p>
+											<div class="panel-footer">Co Founder and Product Manager, From 2015 to present</div>
 										</div>
-										<div class="blockquote-box blockquote-danger clearfix animateBounceInRight">
-											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2018
+									</div>
+									<div class="col-sm-6 animateFadeInDown">
+										<div class="panel panel-default">
+											<div class="panel-heading">DiversityX</div>
+											<div class="panel-body">
+												DiversityX is a Startup that helps people with disabilities find work.
+												I worked with the Startup to build an MVP used as a demo at a REMARKABLE pitch night.
+												Built it in Ruby on Rails with a SQLite3 database in development and moved to postgres for product hosting it on heroku.
+												Worked with the designer to come up with user flow for the full build in which I will be contributing to also.
 											</div>
-											<h2>Human Centred Design - IDEO</h2>
-											<p class="text-justify">
-												Completed a human centred design course gaining great insight into forward thinking design principals.
-											</p>
+											<div class="panel-footer">Developer, From 2016 to present</div>
 										</div>
 									</div>
 								</div>
@@ -282,54 +268,29 @@
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Skills</span></h1>
-								<div class="row">
+                <div class="row">
                   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="90">
                         <span class="sr-only">70% Complete (success)</span>
                       </div>
                       <span class="progress-type">HTML</span>
-                      <span class="progress-completed">100%</span>
+                      <span class="progress-completed">90%</span>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
                       <span class="progress-type">CSS</span>
-                      <span class="progress-completed">100%</span>
+                      <span class="progress-completed">75%</span>
                     </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
-                      <span class="progress-type">JIRA Agile Project Management</span>
-                      <span class="progress-completed">100%</span>
-                    </div>
-										<div class="progress">
-											<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
-											<span class="progress-type">UI Design (Photoshop)</span>
-											<span class="progress-completed">85%</span>
-										</div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
                       <span class="progress-type">Bootstrap</span>
-                      <span class="progress-completed">85%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Customer Relationship Management</span>
                       <span class="progress-completed">80%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
                       <span class="progress-type">Ruby On Rails</span>
                       <span class="progress-completed">75%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Google Ads</span>
-                      <span class="progress-completed">90%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Social Media Marketing</span>
-                      <span class="progress-completed">90%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
@@ -341,15 +302,30 @@
                       <span class="progress-type">AWS</span>
                       <span class="progress-completed">55%</span>
                     </div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
+                      <span class="progress-type">Javascript</span>
+                      <span class="progress-completed">65%</span>
+                    </div>
 										<div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
-                      <span class="progress-type">Database Design</span>
-                      <span class="progress-completed">80%</span>
+                      <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
+                      <span class="progress-type">React</span>
+                      <span class="progress-completed">50%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
+                      <span class="progress-type">Angular</span>
+                      <span class="progress-completed">50%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
-                      <span class="progress-type">SEO</span>
+                      <span class="progress-type">Databases</span>
                       <span class="progress-completed">80%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Photoshop</span>
+                      <span class="progress-completed">75%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
@@ -361,17 +337,27 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-4 col-sm-offset-2 animateFadeInUp">
                     <div class="well">
-                      <h3>Product Management</h3>
+                      <h3>Web Development</h3>
                       <p>
-												I have experience in developing in the full product lifecyle from initial concept to full live solution. With the ability to design, project manage and assist with development.
+												I am capable of building a web app that is mobile responsive from scratch.
+												I have expereince building apps with Ruby on Rails using SQLite3 & postgres for the databases, doing my own styling using bootstrap or materialise CSS libaries.
+												I have an a good understanding of javascript. I've worked through a few tutorials using MongoDB, Express, Angular and Node.js (MEAN stack)
+												having an understanding of some of the core concept but have alot to still learn and am looking forward to the challenge. In the mean time though
+												I'm focusing on rails with the jobs I'm currently working on. Once I have more experience there I'll go deepr into the
+												javascript frameworks and libaries. I have experience with CMS like shopify and WordPress as well as SEO knowledge.
                       </p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-4 animateFadeInUp">
                     <div class="well">
-                      <h3>Innovation & Business Strategy</h3>
+                      <h3>Online Marketing / Business Strategy</h3>
                       <p>
-                      	I love nothing more than scheming and coming up with new concepts and trialling them in the market. With extensive customer experience design & execution strategy planning.
+                        I group these two skills together as I believe they go hand in hand in todays economy.
+												I have experience with facebook ads, instagram ads google ad words and SEO management.
+												Which are essential tools for growth of new and existing business. If leveraged correctly
+												brands can increased awareness of products and services targeting ads at the exact demographic
+												that applies to them. These ads can even be targeted by interests but still need to be able to communicate
+												the right message to be able to appeal to the target audience. Something that I have an eye for.
                       </p>
                     </div>
                   </div>
@@ -382,7 +368,7 @@
 					<!-- /Skills -->
 
 					<!-- Portfolio -->
-					<!-- <div class="bb-item" id="page-5">
+					<div class="bb-item" id="page-5">
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Portfolio</span></h1>
@@ -434,7 +420,7 @@
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
           <!-- /Portfolio -->
 
 					<!-- Contact -->
@@ -444,9 +430,9 @@
 								<h1 class="text-center"><span class="page-heading">Contact</span></h1>
 								<div class="row">
 									<div class="col-sm-12 text-center">
-										<img class="imageShrink3" src="images/YA-logo.png"><img class="imageShrink3" src="images/yogahive-logo.png">
+										<img class="imageShrink3" src="images/envelope-icon.png">
 										<br>
-										<h2 class="contact">Marshall@yogability.org.au</h2>
+										<h2 class="contact">Marshallgray1992@gmail.com</h2>
 										<br>
 										<a class="btn" href="https://www.linkedin.com/in/marshall-gray-031a85103?trk=nav_responsive_tab_profile"><i class="fa fa-4x fa-linkedin"></i></a>
 									</div>
