--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
-										<img src="images/KPMG-hackaton.jpg" alt=""/>
+										<img src="images/KPMG-hackathon.jpg" alt=""/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
 										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.</p>
 								</div>
 								<div class="row content-block text-justify animateFadeInLeft">
 									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
-										<img src="images/mycare.jpg" alt="joypad icon"/>
+										<img src="images/CFA-logo.jpg" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
 										<p>A caring innovator<br>I enjoy a challenge and am happy to work alone or within a team. I have a passion for helping people & love to innovate. I have a positive can do attitude that allows me to work with any type of person to get the job done. In my spare time I do yoga, go into nature, play soccer and read.</p>
@@ -141,13 +141,14 @@
 					<div class="bb-item" id="page-2">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
+								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
-									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
-										<img src="images/yogahive-logo.png" alt="joypad icon"/>
+									<div class="col-sm-2 col-sm-offset-2 text-center">
+										<img src="images/DNTlogo-mini.png" alt="man icon"/>
 									</div>
-									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a> <br>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+									<div class="col-sm-6">
+										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.
+											</br>
 									</div>
 								</div>
 								<div class="row content-block text-justify animateFadeInLeft">
