--- a/index2.html
+++ b/index2.html
@@ -119,7 +119,7 @@
 								<h1 class="text-center"><span class="page-heading">About</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
 									<div class="col-sm-2 col-sm-offset-2 text-center">
-										<img src="images/KPMG-hackaton.jpg" alt=""/>
+										<img src="images/KPMG-hackathon.jpg" alt=""/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
 										<p>A digital creative<br>My name's Marshall Gray, I'm a Sydney based Full Stack web developer with a passion for entrepreneurship, good design, web development, yoga and great ideas! I’m a fun, reliable, loyal and determined person that is full of creative ideas.</p>
